--- a/index.html
+++ b/index.html
@@ -60,12 +60,94 @@
         </div>
       </div>
     </section>
-    <section>
-
+    <section class="second-section">
+      <div class="container clearfix">
+        <div class="news-photo">
+          <div class="news-photo__news">
+            <h1 class="news-photo__title">Новости</h1>
+            <p class="news-photo__text">Нам наконец-то завезли ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
+            <p class="news-photo__date">11 января</p>
+            <p class="news-photo__text">В нашей команде пополнение, Борис &laquo;бритва&raquo; Стригунец, обладатель множества титулов и наград пополни наши стройные ряды</p>
+            <p class="news-photo__date">18 января</p>
+            <a href="#" class="news-photo__button">Все новости</a>
+          </div>
+          <div class="news-photo__photo">
+            <h1 class="news-photo__title">Фотогалерея</h1>
+            <img src="img/news-photo.jpeg" alt="Photogallery" class="news-photo__img">
+            <a href="#" class="news-photo__button">Назад</a>
+            <a href="#" class="news-photo__button">Вперед</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="third-section">
+      <div class="container clearfix">
+        <div class="contacts-visit">
+          <div class="contacts-visit__contacts">
+            <h1 class="contacts-visit__title">Контактная информация</h1>
+            <div class="contacts-visit__adress">
+              <p class="contacts-visit__text">Барбершоп &laquo;Бородинский&raquo;<br>Адрес: г.Санкт-Петербург, б.Конюшенная, д. 19/8<br>Телефон: +7 (495) 666-02-66</p>
+            </div>
+            <div class="contacts-visit__time">
+              <p class="contacts-visit__text">Время работы:<br>ПН-ПТ: с 10:00 до 22:00<br>СБ-ВС: с 10:00 до 19:00</p>
+            </div>
+            <a href="#" class="contacts-visit__button">Как проехать</a>
+            <a href="#" class="contacts-visit__button">ОБратная связь</a>
+          </div>
+          <div class="contacts-visit__visit">
+            <h1 class="contacts-visit__title">Записаться</h1>
+            <p class="contacts-visit__text">Укажите жеаемую дату и время, и мы свяжемся с вами для подтверждения брони</p>
+            <form action="#" class="contact-visit__form">
+              <div class="form__text-block">
+                <p class="form__text">Дата</p>
+                <p class="form__text">Время</p>
+              </div>
+              <label for="#" class="form__date">
+                <input type="date" class="form__input" placeholder="08.10.2017">
+              </label>
+              <label for="#" class="form__time">
+                <input type="time" class="form__input" placeholder="10:00">
+              </label>
+              <div class="form__text-block">
+                <p class="form__text">Ваше имя</p>
+                <p class="form__text">Телефон</p>
+              </div>
+              <label for="#" class="form__name">
+                <input type="text" class="form__input" placeholder="Борода">
+              </label>
+              <label for="#" class="form__phone">
+                <input type="tel" class="form__input" placeholder="+7 123 456-78-90">
+              </label>
+              <input type="submit" value="Отправить" class="form__button">
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
   </section>
   <footer>
-
+    <div class="footer">
+      <div class="container clearfix">
+          <div class="footer__contacts">
+            <p class="footer__text">Барбершоп &laquo;Бородинский&raquo;</p>
+            <p class="footer__text">Адрес:г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8</p>
+            <a href="#" class="footer__link">Как нас найти?</a>
+            <p class="footer__text">Телефон:+7 (495) 666-02-66</p>
+          </div>
+          <div class="footer__share">
+            <p class="footer__text">Давайте дружить!</p>
+            <div class="footer__share__box">
+              <a href="#" class="soc-button footer__share-vk"></a>
+              <a href="#" class="soc-button footer__share-fb"></a>
+              <a href="#" class="soc-button footer__share-inst"></a>
+            </div>
+          </div>
+          <div class="footer__dev">
+            <p class="footer__text">Разработано</p>
+            <a href="#" class="footer__dev__about">htmlacademy</a>
+          </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
