background fix, set correct paddings for item in menu-list, added hover function for buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Borodinski</title>
 </head>
 <body>
-  <header>
+  <header class="index__header">
     <div class="container">
       <nav class="index-nav">
         <ul class="menu clearfix">
@@ -30,7 +30,7 @@
             <a class="menu__link" href="#">Контакты</a>
           </li>
           <li class="menu__item menu__item--login">
-            <a class= "menu__link"href="#">Вход</a>
+            <a class="login__button menu__link" href="#">Вход</a>
           </li>
         </ul>
       </nav>
@@ -146,7 +146,7 @@
           </div>
           <div class="footer__dev">
             <p class="footer__text">Разработано</p>
-            <a href="#" class="footer__dev__about">htmlacademy</a>
+            <a href="#" class="button--standard">htmlacademy</a>
           </div>
       </div>
     </div>
