--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
+  <link href="css/owl.carousel.min.css" rel="stylesheet">
+  <link href="css/owl.theme.default.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Borodinski</title>
@@ -36,93 +38,97 @@
       </nav>
     </div>
   </header>
-  <section class="bg-section">
-    <section class="advantages">
-      <div class="container">
-        <div class="advantages__logo"></div>
-      </div>
-      <div class="container">
-          <div class="advantages__item">
-            <h1 class="advantages__title">Быстро</h1>
-            <p class="advantages__text">Мы делаем свою работу быстро! Два часа пролетят незаметнои вы - счастливый обладатель стильной стрижки-минутки</p>
-          </div>
-          <div class="advantages__item">
-            <h1 class="advantages__title">Круто</h1>
-            <p class="advantages__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звузду футбола или кино! Во всяком случае внешне!</p>
-          </div>
-          <div class="advantages__item">
-            <h1 class="advantages__title">Дорого</h1>
-            <p class="advantages__text">Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+    <section class="bg-section">
+      <section class="advantages">
+        <div class="container">
+          <div class="advantages__logo"></div>
         </div>
-      </div>
-    </section>
-    <section class="second-section">
-      <div class="container">
-        <div class="white-box news-photo clearfix">
-          <div class="news-photo__news">
-            <h1 class="news-photo__title">Новости</h1>
-            <p class="news-photo__text">Нам наконец-то завезли ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
-            <p class="news-photo__date">11 января</p>
-            <p class="news-photo__text">В нашей команде пополнение, Борис &laquo;бритва&raquo; Стригунец, обладатель множества титулов и наград пополни наши стройные ряды</p>
-            <p class="news-photo__date">18 января</p>
-            <div class="news-photo__news-button">
-              <a href="#" class="button">Все новости</a>
+        <div class="container">
+            <div class="advantages__item">
+              <h1 class="advantages__title">Быстро</h1>
+              <p class="advantages__text">Мы делаем свою работу быстро! Два часа пролетят незаметнои вы - счастливый обладатель стильной стрижки-минутки</p>
             </div>
-          </div>
-          <div class="news-photo__photo">
-            <h1 class="news-photo__title">Фотогалерея</h1>
-            <img src="img/news-photo.jpeg" alt="Photogallery" class="news-photo__img">
-            <div class="news-photo__photo-buttons">
-              <a href="#" class="button">Назад</a>
-              <a href="#" class="button">Вперед</a>
+            <div class="advantages__item">
+              <h1 class="advantages__title">Круто</h1>
+              <p class="advantages__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звузду футбола или кино! Во всяком случае внешне!</p>
             </div>
+            <div class="advantages__item">
+              <h1 class="advantages__title">Дорого</h1>
+              <p class="advantages__text">Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="third-section">
-      <div class="container">
-        <div class="white-box contacts-visit clearfix">
-          <div class="contacts-visit__contacts">
-            <h1 class="contacts-visit__title">Контактная информация</h1>
-            <div class="contacts-visit__adress">
-              <p class="contacts-visit__text">Барбершоп &laquo;Бородинский&raquo;<br>Адрес: г.Санкт-Петербург, б.Конюшенная, д. 19/8<br>Телефон: +7 (495) 666-02-66</p>
+      </section>
+      <section class="second-section">
+        <div class="container">
+          <div class="white-box news-photo clearfix">
+            <div class="news-photo__news">
+              <h1 class="news-photo__title">Новости</h1>
+              <p class="news-photo__text">Нам наконец-то завезли ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
+              <p class="news-photo__date">11 января</p>
+              <p class="news-photo__text">В нашей команде пополнение, Борис &laquo;бритва&raquo; Стригунец, обладатель множества титулов и наград пополни наши стройные ряды</p>
+              <p class="news-photo__date">18 января</p>
+              <div class="news-photo__news-button">
+                <a href="#" class="button">Все новости</a>
+              </div>
             </div>
-            <div class="contacts-visit__time">
-              <p class="contacts-visit__text">Время работы:<br>ПН-ПТ: с 10:00 до 22:00<br>СБ-ВС: с 10:00 до 19:00</p>
+            <div class="news-photo__photo">
+              <h1 class="news-photo__title">Фотогалерея</h1>
+              <div class="news-photo__slider owl-carousel">
+                <div><img src="img/slider1.jpeg" alt="Photogallery" class="news-photo__img"></div>
+                <div><img src="img/slider2.jpg" alt="Photogallery" class="news-photo__img"></div>
+                <div><img src="img/slider3.jpg" alt="Photogallery" class="news-photo__img"></div>
+              </div>
+              <div class="news-photo__photo-buttons">
+                <div class="button btn-prev">Назад</div>
+                <div class="button btn-next">Вперед</div>
+              </div>
             </div>
-            <div class="contacts-visit__buttons">
-              <a href="#" class="button">Как проехать</a>
-              <a href="#" class="button">ОБратная связь</a>
-            </div>
-          </div>
-          <div class="contacts-visit__visit">
-            <h1 class="contacts-visit__title">Записаться</h1>
-            <p class="contacts-visit__text">Укажите жеаемую дату и время, и мы свяжемся с вами для подтверждения брони</p>
-            <form action="#" class="contacts-visit__form">
-              <div class="form__text-block">
-                <label for="date" class="form__text">Дата</label>
-                <label for="time" class="form__text">Время</label>
-              </div>
-              <div class="form__input-wrapper">
-                <input id="date" type="date" class="form__input form__input--date" placeholder="08.10.2017">
-                <input id="time" type="time" class="form__input" placeholder="10:00">
-              </div>
-              <div class="form__text-block">
-                <label for="name" class="form__text">Ваше имя</label>
-                <label for="tel" class="form__text">Телефон</label>
-              </div>
-              <div class="form__input-wrapper">
-                <input id="name" type="text" class="form__input form__input--name" placeholder="Борода">
-                <input id="tel" type="tel" class="form__input" placeholder="+7 123 456-78-90">
-              </div>
-              <input type="submit" value="Отправить" class="button form__button">
-            </form>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="third-section">
+        <div class="container">
+          <div class="white-box contacts-visit clearfix">
+            <div class="contacts-visit__contacts">
+              <h1 class="contacts-visit__title">Контактная информация</h1>
+              <div class="contacts-visit__adress">
+                <p class="contacts-visit__text">Барбершоп &laquo;Бородинский&raquo;<br>Адрес: г.Санкт-Петербург, б.Конюшенная, д. 19/8<br>Телефон: +7 (495) 666-02-66</p>
+              </div>
+              <div class="contacts-visit__time">
+                <p class="contacts-visit__text">Время работы:<br>ПН-ПТ: с 10:00 до 22:00<br>СБ-ВС: с 10:00 до 19:00</p>
+              </div>
+              <div class="contacts-visit__buttons">
+                <a href="#" class="button">Как проехать</a>
+                <a href="#" class="button">ОБратная связь</a>
+              </div>
+            </div>
+            <div class="contacts-visit__visit">
+              <h1 class="contacts-visit__title">Записаться</h1>
+              <p class="contacts-visit__text">Укажите жеаемую дату и время, и мы свяжемся с вами для подтверждения брони</p>
+              <form action="#" class="contacts-visit__form">
+                <div class="form__text-block">
+                  <label for="date" class="form__text">Дата</label>
+                  <label for="time" class="form__text">Время</label>
+                </div>
+                <div class="form__input-wrapper">
+                  <input id="date" type="date" class="form__input form__input--date" placeholder="08.10.2017">
+                  <input id="time" type="time" class="form__input" placeholder="10:00">
+                </div>
+                <div class="form__text-block">
+                  <label for="name" class="form__text">Ваше имя</label>
+                  <label for="tel" class="form__text">Телефон</label>
+                </div>
+                <div class="form__input-wrapper">
+                  <input id="name" type="text" class="form__input form__input--name" placeholder="Борода">
+                  <input id="tel" type="tel" class="form__input" placeholder="+7 123 456-78-90">
+                </div>
+                <input type="submit" value="Отправить" class="button form__button">
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
-  </section>
   <footer>
     <div class="footer">
       <div class="container clearfix">
@@ -147,5 +153,8 @@
       </div>
     </div>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
 </body>
 </html>
