fixed carousel's buttons

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div><img src="img/slider3.jpg" alt="Photogallery" class="news-photo__img"></div>
               </div>
               <div class="news-photo__photo-buttons">
-                <div class="button btn-prev">Назад</div>
-                <div class="button btn-next">Вперед</div>
+                <div class="button btn-prev"></div>
+                <div class="button btn-next"></div>
               </div>
             </div>
           </div>
